--- a/ejercicio18.html
+++ b/ejercicio18.html
@@ -38,7 +38,7 @@
 <body>
     <p id="miParrafo">Este es el texto original del párrafo.</p>
     <button id="cambiarTextoBtn">Cambiar texto</button>
-    <script type="module" src="js/ejercicio18.js"></script>
+    <script src="js/ejercicio18.js"></script>
 </body>
 
 </html>
