--- a/ejercicio9.html
+++ b/ejercicio9.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ejercicio9</title>
-    <script type="module" src="ejercicio9.js"></script>
+    <script type="module" src="/js/ejercicio9.js"></script>
   </head>
   <body></body>
 </html>
