--- a/ejercicio9.html
+++ b/ejercicio9.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ejercicio9</title>
-    <script type="module" src="/js/ejercicio9.js"></script>
+    <script type="module">
+      let nombre = prompt("Ingrese su nombre: ");
+      alert(`Hola ${nombre}, bienvenido a Programación Visual!`);
+    </script>
   </head>
   <body></body>
 </html>
