--- a/ejercicio10.html
+++ b/ejercicio10.html
@@ -6,6 +6,6 @@
     let num2 = parseInt(prompt("segundo número:"));
     let num3 = parseInt(prompt("tercer número:"));
     let promedio = (num1 + num2 + num3) / 3;
-    alert("El promedio es: " + promedio);
+    alert(`El promedio es: ${promedio}`);
   </script>
 </head>
