--- a/ejercicio11.html
+++ b/ejercicio11.html
@@ -3,8 +3,10 @@
   <title>Ejercicio 11</title>
   <script>
     let kilometros = parseFloat(prompt("Ingresa los kilometros recorridos:"));
-    let litros = parseFloat(prompt("Ingresa los litros de combustible consumidos:"));
+    let litros = parseFloat(
+      prompt("Ingresa los litros de combustible consumidos:")
+    );
     let consumo = litros / kilometros;
-    alert("El consumo por kilómetro es: " + consumo.toFixed(2) + " litros/km");
+    alert(`El consumo por kilómetro es: ${consumo.toFixed(2)}litros/km`);
   </script>
 </head>
