--- a/ejercicio13.html
+++ b/ejercicio13.html
@@ -4,11 +4,10 @@
   <script>
     function mostrarArreglo(arreglo) {
       for (let i = 0; i < arreglo.length; i++) {
-        alert("Elemento " + (i + 1) + ": " + arreglo[i]);
+        alert(`Elemento ${i + 1} : ${arreglo[i]}`);
       }
     }
     let numeros = [5, 10, 15, 20, 25];
     mostrarArreglo(numeros);
   </script>
 </head>
-
