--- a/ejercicio14.html
+++ b/ejercicio14.html
@@ -14,7 +14,7 @@
 
     let duplicados = duplicar(numeros);
 
-    alert("Arreglo original: " + numeros.join(", "));
-    alert("Arreglo duplicado: " + duplicados.join(", "));
+    alert(`Arreglo original: ${numeros.join(", ")}`);
+    alert(`Arreglo duplicado: ${duplicados.join(", ")}`);
   </script>
 </head>
